# xcx-compiler

./: .gitignore  3.0_changelog.md  Cargo.toml  LICENSE  README.md
documentation/: README.md
documentation/compiler/: README.md  architecture.md  jit.md  language.md  lexer.md  parser.md  semantics.md  vm.md
documentation/language/: collections.md  control_flow.md  database.md  dates.md  errors_halt.md  functions_fibers.md  io_terminal.md  json_http.md  library_modules.md  operators.md  string_methods.md  syntax.md  types.md  variables.md
documentation/pax/: pax_manual.md
lib/: math.xcx  pax.xcx
notes/: README.md  project.pax
notes/src/: main.xcx  note.xcx
src/: main.rs
src/backend/: jit.rs  mod.rs  repl.rs  tests.rs  vm.rs
src/diagnostic/: report.rs
src/lexer/: scanner.rs  token.rs
src/parser/: ast.rs  expander.rs  mod.rs  pratt.rs  tests.rs
src/sema/: checker.rs  interner.rs  symbol_table.rs
tests/: crypto_test.xcx  db_fail_test.xcx  db_full_test.xcx  debug_cms.xcx  game_demo.xcx  header_test.xcx  json_bind_test.xcx  json_integrity_test.xcx  pax_test.xcx  settest.xcx  store_zip_test.xcx  test_all_elements.xcx  test_io.xcx  test_json_http.xcx  trigger_500.xcx  xcx_runner.rs
tests/edge_cases_suite/: edge_cases.xcx  recent_features.xcx  terminal_run.xcx  terminal_run_helper.xcx
tests/feature_suite/: input_strict_test.xcx  store_extension.xcx  test_basics.xcx  test_collections.xcx  test_control_flow.xcx  test_empty_set.xcx  test_fibers.xcx  test_functions.xcx  test_map_to_json.xcx  (+6 more)
xcx-installer/: Cargo.toml
xcx-installer-pkg/: xcx-setup.iss
(+20 files in other folders)
