[package]
name = "xcx-compiler"
version = "2.2.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
rand = "0.9.0"
serde_json = "1.0"
ureq = "2.12.1"
tiny_http = "0.12.0"
bcrypt = "0.17"
argon2 = "0.5"
hex = "0.4.3"
ctrlc = "3.4"
parking_lot = "0.12"
cranelift-codegen = "0.130.0"
cranelift-frontend = "0.130.0"
cranelift-native = "0.130.0"
cranelift-module = "0.130.0"
cranelift-jit = "0.130.0"
cranelift = "0.130.0"
target-lexicon = "0.13.5"
[profile.release]
debug = false
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "unwind"
strip = false
