[package]
name = "xcx-compiler"
version = "3.0.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
rand = "0.9.0"
serde_json = "1.0"
ureq = "2.12.1"
tiny_http = "0.12.0"
bcrypt = "0.17"
argon2 = "0.5"
hex = "0.4.3"
base64 = "0.22"
rusqlite = { version = "0.33", features = ["bundled"] }
ctrlc = "3.4"
parking_lot = "0.12"
cranelift-codegen = "0.130.0"
cranelift-frontend = "0.130.0"
cranelift-native = "0.130.0"
cranelift-module = "0.130.0"
cranelift-jit = "0.130.0"
cranelift = "0.130.0"
target-lexicon = "0.13.5"
zip = "2.2.0"
glob = "0.3.1"
walkdir = "2.5"
windows = { version = "0.58", features = [
    "Win32_System_Console",
    "Win32_Foundation",
]}
crossterm = "0.28"



[profile.release]
debug = false
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "unwind"
strip = true
